--- a/wp-ig-components/scss/components/buttons/states/hover/background/hov-b__cs--x.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/background/hov-b__cs--x.scss
@@ -1,4 +1,4 @@
-@mixin hov__cs--x($color, $bg-color, $transform_origin1, $transform_origin2) {
+@mixin hov-b__cs--x($color, $bg-color, $transform_origin1, $transform_origin2) {
     & {
         z-index: 1;
         overflow: hidden;
