--- a/wp-ig-components/scss/components/buttons/states/hover/border/hov-b__border-reveal.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/border/hov-b__border-reveal.scss
@@ -1,8 +1,8 @@
-.hov__border-reveal {
+.hov-b__border-reveal {
   --hov-border-reveal-color: #f4ecff;
 }
 
-.hov__border-reveal {
+.hov-b__border-reveal {
   overflow: hidden;
   &:before {
     content: "";
