--- a/wp-ig-components/scss/components/buttons/states/hover/border/hov-b__border-rounder.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/border/hov-b__border-rounder.scss
@@ -1,10 +1,10 @@
-.hov__border-rounder {
+.hov-b__border-rounder {
   transition: border-radius 0.2s ease-in;
   &:hover {
     border-radius: 1em;
   }
 
-  &.btnc--pill.hov__border-rounder:hover {
+  &.btnc--pill.hov-b__border-rounder:hover {
     border-radius: 16px;
   }
 }
