changed names of hov-b uncategor

--- a/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__bg-to-rails.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__bg-to-rails.scss
@@ -1,10 +1,10 @@
-.hov__bg-to-rails {
+.hov-b__bg-to-rails {
   --hov-bg-to-rails-text-color: #fff;
   --hov-bg-to-rails-background-color: rgba(255, 255, 255, 0.1);
   --hov-bg-to-rails-rails-color: rgba(255, 255, 255, 0.5);
 }
 
-.hov__bg-to-rails {
+.hov-b__bg-to-rails {
   overflow: hidden;
   border: none;
   color: var(--hov-bg-to-rails-text-color);
