--- a/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__bg-to-border.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__bg-to-border.scss
@@ -1,9 +1,9 @@
-.hov__bg-to-border {
+.hov-b__bg-to-border {
   --hov-bg-to-border-text-color: #fff;
   --hov-bg-to-border-background-color: rgba(255, 255, 255, 0.1);
   --hov-bg-to-border-border-color: rgba(255, 255, 255, 0.5);
 }
-.hov__bg-to-border {
+.hov-b__bg-to-border {
   border: none;
   overflow: hidden;
   color: var(--hov-bg-to-border-text-color);
@@ -38,13 +38,13 @@
     transform: scale(1.2, 1.2);
   }
 
-  &.btnc--pill.hov__bg-to-border:after {
+  &.btnc--pill.hov-b__bg-to-border:after {
     border-radius: 40px;
   }
-  &.btnc--square.hov__bg-to-border:after {
+  &.btnc--square.hov-b__bg-to-border:after {
     border-radius: 0;
   }
-  &.btnc--circle.hov__bg-to-border:after {
+  &.btnc--circle.hov-b__bg-to-border:after {
     border-radius: 50%;
   }
 
