--- a/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__rails.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__rails.scss
@@ -1,23 +1,23 @@
-.hov__rails {
+.hov-b__rails {
     --hov-rails-rail-color: #fff;
 }
 
-.hov__rails {
+.hov-b__rails {
   position: relative;
   flex-direction: column;
   letter-spacing: 0;
   transition: letter-spacing .2s ease-in;
 }
 
-.hov__rails:hover,
-.hov__rails:active {
+.hov-b__rails:hover,
+.hov-b__rails:active {
   letter-spacing: 5px;
   opacity: 1;
 
 }
 
-.hov__rails:after,
-.hov__rails:before {
+.hov-b__rails:after,
+.hov-b__rails:before {
   backface-visibility: hidden;
   border: 1px solid var(--hov-rails-rail-color);
   bottom: 0px;
@@ -31,8 +31,8 @@
   visibility: hidden
 }
 
-.hov__rails:hover:after,
-.hov__rails:hover:before {
+.hov-b__rails:hover:after,
+.hov-b__rails:hover:before {
   backface-visibility: hidden;
   border-color: var(--hov-rails-rail-color);
   transition: width 350ms ease-in-out;
@@ -41,12 +41,12 @@
   visibility: visible;
 }
 
-.hov__rails:hover:before {
+.hov-b__rails:hover:before {
   bottom: auto;
   top: 0;
   width: 100%;
 }
-.hov__rails:hover:after {
+.hov-b__rails:hover:after {
   bottom: auto;
   top: 0;
   width: 100%;
