same efect on focus as hover in hov-b 2d

--- a/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__beat-shrink.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__beat-shrink.scss
@@ -1,10 +1,10 @@
 .hov-b__beat-shrink {
-  &:hover {
+  &:hover,
+  &:focus {
     animation: hov-beat-shrink 1s linear infinite;
   }
 
-  &:active,
-  &:focus {
+  &:active {
     animation: none;
   }
 }
