--- a/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__beat.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__beat.scss
@@ -1,10 +1,9 @@
 .hov-b__beat {
-  &:hover {
+  &:hover, &:focus {
     animation: hov-beat 1s linear infinite;
   }
 
-  &:active,
-  &:focus {
+  &:active {
     animation: none;
   }
 }
