--- a/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__buzz.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__buzz.scss
@@ -1,8 +1,8 @@
 .hov-b__buzz {
-    &:hover {
+    &:hover, &:focus {
         animation: hov-buzz .15s linear infinite;
     }
-    &:active, &:focus {
+    &:active {
         animation: none;
     }
 }
