--- a/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__shake-x-bottom.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__shake-x-bottom.scss
@@ -1,9 +1,9 @@
 .hov-b__shake-x-bottom {
     transform-origin: 100% 0;
-    &:hover {
+    &:hover, &:focus {
         animation: hover-shake-x-bottom 1s ease-in-out 1;
     }
-    &:active, &:focus {
+    &:active {
         animation: none;
     }
 
