--- a/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__shake-x.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__shake-x.scss
@@ -1,31 +1,31 @@
 .hov-b__shake-x {
-    &:hover {
-        animation: hov-shake-x 1s ease-in-out 1;
+    &:hover,
+    &:focus {
+      animation: hov-shake-x 1s ease-in-out 1;
     }
-    &:active, &:focus {
-        animation: none;
+    &:active {
+      animation: none;
     }
-
-}
-
-@keyframes hov-shake-x {
+  }
+  
+  @keyframes hov-shake-x {
     16.65% {
-        transform: translateX(8px);
+      transform: translateX(8px);
     }
-    
+  
     33.3% {
-        transform: translateX(-6px);
+      transform: translateX(-6px);
     }
     49.95% {
-        transform: translateX(4px);
+      transform: translateX(4px);
     }
     66.6% {
-        transform: translateX(-2px);
+      transform: translateX(-2px);
     }
     83.25% {
-        transform: translateX(1px);
+      transform: translateX(1px);
     }
     100% {
-        transform: translateX(0);
+      transform: translateX(0);
     }
-}
+  }
