--- a/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__beat-grow.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__beat-grow.scss
@@ -1,10 +1,9 @@
 .hov-b__beat-grow {
-  &:hover {
+  &:hover, &:focus {
     animation: hover-beat-grow 1s linear infinite;
   }
 
-  &:active,
-  &:focus {
+  &:active {
     animation: none;
   }
 }
