--- a/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__grow.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__grow.scss
@@ -1,9 +1,10 @@
 .hov-b__grow {
-    transition: transform 0.2s ease-in;
-    &:hover {
-      transform: scale(1.1);
-    }
-    &:active {
-      transform: scale(0.9);
-    }
+  transition: transform 0.2s ease-in;
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
   }
+  &:active {
+    transform: scale(0.9);
+  }
+}
