hov-b background focus

--- a/wp-ig-components/scss/components/buttons/states/hover/background/hov-b__c-swap.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/background/hov-b__c-swap.scss
@@ -1,12 +1,12 @@
 @mixin hov-b__c-swap($color, $bg-color) {
-    transition: color .3s ease, background-color .3s ease;
-  
-    color: $color;
-    background-color: $bg-color;
-    &:hover,
-    &:focus,
-    &:active {
-      color: $bg-color;
-      background-color: $color;
-    }
+  transition: color 0.3s ease, background-color 0.3s ease;
+
+  color: $color;
+  background-color: $bg-color;
+  &:hover,
+  &:focus,
+  &:active {
+    color: $bg-color;
+    background-color: $color;
   }
+}
