--- a/wp-ig-components/scss/components/buttons/states/hover/background/hov-b__sc--center-y--in.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/background/hov-b__sc--center-y--in.scss
@@ -1,4 +1,10 @@
-@mixin hov-b__cs--y--in($color, $bg-color--before-hover, $bg-color--after-hover, $transform_origin1, $transform_origin2) {
+@mixin hov-b__cs--y--in(
+  $color,
+  $bg-color--before-hover,
+  $bg-color--after-hover,
+  $transform_origin1,
+  $transform_origin2
+) {
   & {
     z-index: 1;
     overflow: hidden;
@@ -18,7 +24,9 @@
     transition: transform 0.3s cubic-bezier(0.89, -0.1, 0.96, 0.64), color 0.3s cubic-bezier(0.89, -0.1, 0.96, 0.64);
   }
 
-  &:hover {
+  &:hover,
+  &:active,
+  &:focus {
     color: $color;
   }
   &:hover:before,
