--- a/wp-ig-components/scss/components/buttons/states/hover/border/hov-b__border-out-out.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/border/hov-b__border-out-out.scss
@@ -25,10 +25,13 @@
     border-radius: 50%;
   }
 
-  &:hover:before {
-    top: -8px;
-    right: -8px;
-    bottom: -8px;
-    left: -8px;
+  &:hover,
+  &:focus {
+    &:before {
+      top: -8px;
+      right: -8px;
+      bottom: -8px;
+      left: -8px;
+    }
   }
 }
