--- a/wp-ig-components/scss/components/buttons/states/hover/border/hov-b__border-invert.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/border/hov-b__border-invert.scss
@@ -5,7 +5,7 @@
   
   .hov-b__border-invert {
     transition: background-color 0.2s linear, box-shadow 0.2s linear, color 0.2s linear;
-    &:hover {
+    &:hover, &:focus {
       background-color: transparent;
       box-shadow: inset 0 0 0 4px var(--hov-border-invert-bg-color);
       color: var(--hov-border-invert-text-color);
