--- a/wp-ig-components/scss/components/buttons/states/hover/border/hov-b__border-overline.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/border/hov-b__border-overline.scss
@@ -20,8 +20,11 @@
       left: 0;
       right: 100%;
     }
-    &:hover:before {
-      right: 0;
+    &:hover,
+    &:focus {
+      &:before {
+        right: 0;
+      }
     }
   }
   &--fc {
@@ -29,9 +32,12 @@
       left: 51%;
       right: 51%;
     }
-    &:hover:before {
-      left: 0;
-      right: 0;
+    &:hover,
+    &:focus {
+      &:before {
+        left: 0;
+        right: 0;
+      }
     }
   }
   &--fr {
@@ -39,8 +45,11 @@
       left: 100%;
       right: 0;
     }
-    &:hover:before {
-      left: 0;
+    &:hover,
+    &:focus {
+      &:before {
+        left: 0;
+      }
     }
   }
 }
