same focus as hover in hov-b uncat

--- a/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__bg-to-border.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__bg-to-border.scss
@@ -48,7 +48,8 @@
     border-radius: 50%;
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     &:before {
       opacity: 0;
       transform: scale(0.5, 0.5);
