--- a/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__bg-to-rails.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__bg-to-rails.scss
@@ -45,7 +45,7 @@
     background-color: var(--hov-bg-to-rails-background-color);
   }
 
-  &:hover {
+  &:hover, &:focus {
     & span {
       letter-spacing: 2px;
     }
