--- a/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__rails.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__rails.scss
@@ -1,19 +1,18 @@
 .hov-b__rails {
-    --hov-rails-rail-color: #fff;
+  --hov-rails-rail-color: #fff;
 }
 
 .hov-b__rails {
   position: relative;
   flex-direction: column;
   letter-spacing: 0;
-  transition: letter-spacing .2s ease-in;
+  transition: letter-spacing 0.2s ease-in;
 }
 
 .hov-b__rails:hover,
 .hov-b__rails:active {
   letter-spacing: 5px;
   opacity: 1;
-
 }
 
 .hov-b__rails:after,
@@ -28,7 +27,7 @@
   transition: all 280ms ease-in-out;
   width: 0;
   align-self: flex-start;
-  visibility: hidden
+  visibility: hidden;
 }
 
 .hov-b__rails:hover:after,
@@ -41,13 +40,16 @@
   visibility: visible;
 }
 
-.hov-b__rails:hover:before {
-  bottom: auto;
-  top: 0;
-  width: 100%;
-}
-.hov-b__rails:hover:after {
-  bottom: auto;
-  top: 0;
-  width: 100%;
+.hov-b__rails:hover,
+.hov-b__rails:focus {
+  &:before {
+    bottom: auto;
+    top: 0;
+    width: 100%;
+  }
+  &:after {
+    bottom: auto;
+    top: 0;
+    width: 100%;
+  }
 }
