--- a/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__shadow-pop.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/uncategorized/hov-b__shadow-pop.scss
@@ -32,7 +32,7 @@
     border-radius: 50%;
   }
 
-  &:hover {
+  &:hover, &:focus {
     transform: translateY(-3px);
     box-shadow: 0 10px 20px var(--hov-shadow-pop-shadow-color);
     &:after {
