--- a/wp-ig-components/scss/components/links/states/hover/border-and-text/hov-l__b-and-t-fill.scss
+++ b/wp-ig-components/scss/components/links/states/hover/border-and-text/hov-l__b-and-t-fill.scss
@@ -1,9 +1,9 @@
-.hov-l__bb-text-fill {
-  --hov-l-bb-text-fill-color: #e8efff;
-  --hov-l-bb-text-fill-border-size: 2px;
+.hov-l__b-and-t-fill {
+  --hov-l-b-and-t-fill-color: #e8efff;
+  --hov-l-b-and-t-fill-border-size: 2px;
 }
 
-.hov-l__bb-text-fill {
+.hov-l__b-and-t-fill {
   position: relative;
   &:before {
     position: absolute;
@@ -11,8 +11,8 @@
     left: 0;
     overflow: hidden;
     white-space: nowrap;
-    border-bottom: var(--hov-l-bb-text-fill-border-size) solid var(--hov-l-bb-text-fill-color);
-    color: var(--hov-l-bb-text-fill-color);
+    border-bottom: var(--hov-l-b-and-t-fill-border-size) solid var(--hov-l-b-and-t-fill-color);
+    color: var(--hov-l-b-and-t-fill-color);
     content: attr(data-css-hov-l);
     transition: max-width 0.5s, height 0.5s, opacity 0.5s;
   }
@@ -53,7 +53,7 @@
       &:before {
         height: 100%;
         opacity: 1;
-        border-bottom: var(--hov-l-bb-text-fill-border-size) solid var(--hov-l-bb-text-fill-color);
+        border-bottom: var(--hov-l-b-and-t-fill-border-size) solid var(--hov-l-b-and-t-fill-color);
       }
     }
   }
@@ -68,7 +68,7 @@
       &:before {
         height: 0;
         opacity: 0;
-        border-bottom: var(--hov-l-bb-text-fill-border-size) solid var(--hov-l-bb-text-fill-color);
+        border-bottom: var(--hov-l-b-and-t-fill-border-size) solid var(--hov-l-b-and-t-fill-color);
       }
     }
   }
