--- a/wp-ig-components/scss/components/links/states/hover/border-and-text/hov-l__b-and-t-hidden-text.scss
+++ b/wp-ig-components/scss/components/links/states/hover/border-and-text/hov-l__b-and-t-hidden-text.scss
@@ -1,18 +1,18 @@
-.hov-l__b-hidden-text {
-  --hov-l-b-hidden-text-invisible-el-color: rgba(0, 0, 0, 0.4);
-  --hov-l-b-hidden-text-border-color: #e8efff;
-  --hov-l-b-hidden-text-bottom-border-spacing: 25px;
-  --hov-l-b-hidden-text-top-border-height-after-hover: 6px;
+.hov-l__b-and-t-hidden-text {
+  --hov-l-b-and-t-hidden-text-invisible-el-color: rgba(0, 0, 0, 0.4);
+  --hov-l-b-and-t-hidden-text-border-color: #e8efff;
+  --hov-l-b-and-t-hidden-text-bottom-border-spacing: 25px;
+  --hov-l-b-and-t-hidden-text-top-border-height-after-hover: 6px;
 }
 
-.hov-l__b-hidden-text {
+.hov-l__b-and-t-hidden-text {
   position: relative;
   &__invisible {
     position: absolute;
     left: 50%;
     z-index: 1;
     display: block;
-    color: var(--hov-l-b-hidden-text-invisible-el-color);
+    color: var(--hov-l-b-and-t-hidden-text-invisible-el-color);
     opacity: 0;
     transition: transform 0.3s, opacity 0.3s;
     transform: translateY(-100%) translateX(-50%);
@@ -25,7 +25,7 @@
     left: 0;
     width: 100%;
     height: 1px;
-    background: var(--hov-l-b-hidden-text-border-color);
+    background: var(--hov-l-b-and-t-hidden-text-border-color);
     content: "";
     opacity: 0.2;
     transition: opacity 0.3s, height 0.3s;
@@ -39,7 +39,7 @@
   }
   &:hover,
   &:focus {
-    & .hov-l__b-hidden-text__invisible {
+    & .hov-l__b-and-t-hidden-text__invisible {
       opacity: 1;
       transform: translateY(0) translateX(-50%);
     }
@@ -51,10 +51,10 @@
     }
 
     &:before {
-      height: var(--hov-l-b-hidden-text-top-border-height-after-hover);
+      height: var(--hov-l-b-and-t-hidden-text-top-border-height-after-hover);
     }
     &:after {
-      transform: translateY(var(--hov-l-b-hidden-text-bottom-border-spacing));
+      transform: translateY(var(--hov-l-b-and-t-hidden-text-bottom-border-spacing));
     }
   }
 }
