--- a/wp-ig-components/scss/components/links/states/hover/text/hov-l__t-scale.scss
+++ b/wp-ig-components/scss/components/links/states/hover/text/hov-l__t-scale.scss
@@ -1,10 +1,10 @@
-.hov-l__scale {
+.hov-l__t-scale {
   --hov-l-scale-amount-up: 1.05;
   --hov-l-scale-amount-down: 0.95;
   --hov-l-scale-animation-speed: 0.1s;
 }
 
-.hov-l__scale {
+.hov-l__t-scale {
   position: relative;
   transition: transform var(--hov-l-scale-animation-speed) linear;
 
