--- a/wp-ig-components/scss/utilities/individual/position.scss
+++ b/wp-ig-components/scss/utilities/individual/position.scss
@@ -1,6 +1,6 @@
 .ig-pos-r {
-  position: relative;
+  position: relative !important;
 }
 .ig-pos-a {
-  position: absolute;
+  position: absolute !important;
 }
