--- a/wp-ig-components/scss/utilities/individual/width.scss
+++ b/wp-ig-components/scss/utilities/individual/width.scss
@@ -1,30 +1,30 @@
 .ig-w-10 {
-  width: 10%;
+  width: 10% !important;
 }
 .ig-w-20 {
-  width: 20%;
+  width: 20% !important;
 }
 .ig-w-30 {
-  width: 30%;
+  width: 30% !important;
 }
 .ig-w-40 {
-  width: 40%;
+  width: 40% !important;
 }
 .ig-w-50 {
-  width: 50%;
+  width: 50% !important;
 }
 .ig-w-60 {
-  width: 60%;
+  width: 60% !important;
 }
 .ig-w-70 {
-  width: 70%;
+  width: 70% !important;
 }
 .ig-w-80 {
-  width: 80%;
+  width: 80% !important;
 }
 .ig-w-90 {
-  width: 90%;
+  width: 90% !important;
 }
 .ig-w-100 {
-  width: 100%;
+  width: 100% !important;
 }
