--- a/wp-ig-components/scss/utilities/utilities-bundle.scss
+++ b/wp-ig-components/scss/utilities/utilities-bundle.scss
@@ -1,4 +1,5 @@
 @import './individual/margin';
 @import './individual/width';
 @import './individual/position';
+@import './individual/text';
 @import './individual/overflow';
