--- a/wp-ig-components/scss/components/cards/cardc/cardc.scss
+++ b/wp-ig-components/scss/components/cards/cardc/cardc.scss
@@ -28,13 +28,8 @@
     background-repeat: no-repeat;
     background-position: left center;
     padding: var(--cardc-content-padding, 1em);
-
- 
-
   }
 }
-
-
 
 .cardc-content {
   padding: var(--cardc-content-padding, 1em);
@@ -62,23 +57,11 @@
 }
 
 .cardc-buttons {
-
   &__icon {
     display: inline-block;
     cursor: pointer;
   }
 }
-
-.ig-px-2 {
-  padding-right: .5em;
-  padding-left: .5em;
-}
-.ig-pl-2 {
-  padding-left: .5em;
-}
-
-
-
 
 
 
@@ -91,6 +74,8 @@
     }
   }
   &__text {
+    position: relative;
+    z-index: 2;
     &--light {
       color: white;
     }
@@ -101,10 +86,12 @@
   }
 }
 
-
-.ig-svg-i-light {
-  svg {
-    fill: white;
-
-  }
+.cardc__text-background {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: var(--cardc-text-background-color, rgba(0, 0, 0, 0.2));
+  height: var(--cardc-text-background-height, 40%);
+  width: 100%;
+  z-index: 1;
 }
