--- a/wp-ig-components/scss/components/buttons/btn-dropdown/btn-dropdown-transform-x-to-up.scss
+++ b/wp-ig-components/scss/components/buttons/btn-dropdown/btn-dropdown-transform-x-to-up.scss
@@ -43,3 +43,19 @@
     left: 5px;
   }
 }
+
+.btn-dropdown-transform-x-to-up__hover-circle {
+  position: relative;
+  padding: 1.6em;
+  border-radius: 50%;
+  transition: background-color 0.3s linear;
+
+  & > div {
+    @include center("both");
+    margin-left: 0.2em;
+    margin-top: 2px;
+  }
+  &:hover {
+    background-color: var(--btn-dropdown-transform-x-to-up-hover-circle-color, rgba(168, 168, 168, 0.2));
+  }
+}
