added btn dropdown reverse

--- a/wp-ig-components/scss/components/buttons/dropdown-arrow-icon/dropdown-arrow-icon.scss
+++ b/wp-ig-components/scss/components/buttons/dropdown-arrow-icon/dropdown-arrow-icon.scss
@@ -1,3 +1,6 @@
+//!!!! DEPRECATED!!! USED ONLY IN ONE OF THE NAV MENUES, DETLETE THIS WHEN REPLACED BY ANOTHER DROPDOWN BUTTON!!!!!
+
+
 $easing: cubic-bezier(.25,1.7,.35,.8);
 $duration: 0.5s;
 
