adjusted expand content v1

--- a/wp-ig-components/scss/utilities/individual/padding.scss
+++ b/wp-ig-components/scss/utilities/individual/padding.scss
@@ -4,6 +4,10 @@
 
 //Padding around
 
+.ig-p-0 {
+  padding: 0 !important;
+}
+
 .ig-p-1 {
   padding: calc(var(--pm-spacer, 1em) * 0.25) !important;
 }
