--- a/wp-ig-components/scss/components/dropdowns/expandable-content/expand-content-v1.scss
+++ b/wp-ig-components/scss/components/dropdowns/expandable-content/expand-content-v1.scss
@@ -1,24 +1,11 @@
-.expand-content-v1__container {
-  --expand-content-v1-container-width: 400px;
-  --expand-content-v1-container-margins: 7px auto;
-  --expand-content-v1-container-height: 69px;
-  --expand-content-v1-container-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-  --expand-content-v1-title-trigger-padding: 24px;
-  --expand-content-v1-title-trigger-bg-color: #6db2d1;
-  --expand-content-v1-title-trigger-text-color: #fff;
-  --expand-content-v1-inner-content-bg-color: #fff;
-  --expand-content-v1-inner-content-text-color: #777;
-  --expand-content-v1-inner-content-padding: 20px 20px 40px;
-}
-
 .expand-content-v1 {
   &__container {
     width: var(--expand-content-v1-container-width, 100%);
     margin: var(--expand-content-v1-container-margins, 0);
-    height: var(--expand-content-v1-container-height, auto);
+    max-height: var(--expand-content-v1-container-height, auto);
     box-shadow: var(--expand-content-v1-container-shadow, none);
     overflow: hidden;
-    transition: 0.35s;
+    transition: var(--expand-content-v1-transition-duration, 0.55s);
   }
   &__title-trigger {
     padding: var(--expand-content-v1-title-trigger-padding, 0);
@@ -35,11 +22,16 @@
     color: var(--expand-content-v1-inner-content-text-color, black);
     transform: translateY(-100%);
     overflow: hidden;
-    transition: 0.35s;
+    transition: var(--expand-content-v1-transition-duration, 0.55s);
+  }
+  &__has-indicator {
+    display: flex;
+    justify-content: space-between;
   }
 }
 
 .expand-content-v1__container.expand-content-v1__inner-content--is-open {
+  max-height: var(--expand-content-v1-container-max-height, 1000px);
   height: 100%;
 }
 .expand-content-v1__inner-content--is-open .expand-content-v1__inner-content {
